<resources>
    <string name="app_name">Hora-bus</string>
    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="title_activity_profile1">Profile1Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>





    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_adminprofile">AdminprofileActivity</string>
    <string-array name="types">
        <item>Select bus type</item>
        <item>Ordinary</item>
        <item>Fast</item>
        <item>Limited Stop</item>
        <item>Super Fast</item>
        <item>Minnal</item>

    </string-array>
    <string-array name="status">
        <item>RUNNING</item>
        <item>HALTED</item>

    </string-array>
</resources>
